--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 this is a read me file and contains info about the git repo
 I have updated the file to check new things
+i have to use pull feature
